# nous-storage-meta-contract

./: .gitignore  Cargo.toml  Config.toml  build.sh
artifacts/: evm_rpc.wasm  meta-contract.wasm
configs/: deploy-cfg.json
evm_rpc/: Cargo.toml
evm_rpc/src/: eth_calls.rs  eth_contract.rs  eth_utils.rs  fce_results.rs  jsonrpc_helpers.rs  main.rs  types.rs
evm_rpc/src/models/: log_param.rs  mod.rs
meta_contract/src/: data.rs  defaults.rs  main.rs  types.rs
src/: main.rs  types.rs
