[package]
name = "evm_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
log = "0.4.14"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
ethereum-types = "0.14.1"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ethabi = "18.0.0"
